# llm_inference_engine

./: .gitignore  MODEL.md  PRD.md  README.md  RESUME.md  TASKS.md  implemented.md  pyproject.toml
bench/: baseline_hf.py  baseline_llamacpp.py  bench_attn_kernel.py  harness.py  perplexity.py  test_harness.py  wikitext_sample.txt
engine/: cache.py  cli.py  components.py  components_gpu.py  loader.py  model.py  model_gpu.py  quant.py  sampler.py  scheduler.py  server.py
kernels/: CMakeLists.txt  add_one_kernel.cu  attention_decode.cu  attn_reference.py  bindings.cpp  hello.cu
notes/: model_config.md  tensor_dump.txt
scripts/: build_kernels.sh  inspect_weights.py  test_bindings.py  tokenizer_check.py
tests/: conftest.py  oracle.py  test_attention_kernel.py  test_cache.py  test_components.py  test_components_gpu.py  test_decode.py  test_forward.py  test_generate.py  test_gpu_model.py  test_loader.py  test_quant.py  test_sampler.py  test_server.py
